Services, DTOs, Controllers, Repositories

--- a/vastra-ecommerce/appsettings.json
+++ b/vastra-ecommerce/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=LAPTOP-C1BEDHV7\\SQLEXPRESS;Database=EcommerceDb;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
+  "Jwt": {
+    "Key": "Zzkr5kTRTFy96NsKRr1amvohbfVFUYv3",
+    "Issuer": "https://localhost:7001",
+    "Audience": "https://localhost:7001"
+  }
 }
